config/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: dprod-data-ingestion
  labels:
    sandbox: serverless
    sandbox-serverless: overlay

spec:
  template:
    spec:
      containers:
        - image: quay.io/developerproductivity/data-ingestion:latest
          ports:
            - containerPort: 5002
              protocol: TCP
          env:
          - name: GITHUB_SECRET
            valueFrom:
              secretKeyRef:
                name: app-secret
                key: gitHubToken
          - name: LOGILICA_TOKEN
            valueFrom:
              secretKeyRef:
                name: app-secret
                key: logilicaToken
