config/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: data-ingestion
spec:
  host: data-ingestion.apps.rm2.thpm.p1.openshiftapps.com
  path: /
  to:
    kind: Service
    name: data-ingestion
    weight: 100
  port:
    targetPort: 5002
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
